docs/api/qiskit/0.25/qiskit.pulse.Play.mdx
---
title: Play
description: API reference for qiskit.pulse.Play
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.Play
---

<span id="qiskit-pulse-play" />

# qiskit.pulse.Play

<Class id="qiskit.pulse.Play" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/instructions/play.py" signature="Play(pulse, channel, name=None)" modifiers="class">
  This instruction is responsible for applying a pulse on a channel.

  The pulse specifies the exact time dynamics of the output signal envelope for a limited time. The output is modulated by a phase and frequency which are controlled by separate instructions. The pulse duration must be fixed, and is implicitly given in terms of the cycle time, dt, of the backend.

  Create a new pulse instruction.

  **Parameters**

  *   **pulse** (`Pulse`) – A pulse waveform description, such as [`Waveform`](qiskit.pulse.library.Waveform "qiskit.pulse.library.Waveform").
  *   **channel** ([`PulseChannel`](qiskit.pulse.channels#qiskit.pulse.channels.PulseChannel "qiskit.pulse.channels.PulseChannel")) – The channel to which the pulse is applied.
  *   **name** (`Optional`\[`str`]) – Name of the instruction for display purposes. Defaults to `pulse.name`.

  **Raises**

  [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If pulse is not a Pulse type.

  ### \_\_init\_\_

  <Function id="qiskit.pulse.Play.__init__" signature="__init__(pulse, channel, name=None)">
    Create a new pulse instruction.

    **Parameters**

    *   **pulse** (`Pulse`) – A pulse waveform description, such as [`Waveform`](qiskit.pulse.library.Waveform "qiskit.pulse.library.Waveform").
    *   **channel** ([`PulseChannel`](qiskit.pulse.channels#qiskit.pulse.channels.PulseChannel "qiskit.pulse.channels.PulseChannel")) – The channel to which the pulse is applied.
    *   **name** (`Optional`\[`str`]) – Name of the instruction for display purposes. Defaults to `pulse.name`.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If pulse is not a Pulse type.
  </Function>

  ## Methods

  |                                                                                                                |                                                                                                                                                                               |
  | -------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.pulse.Play.__init__ "qiskit.pulse.Play.__init__")(pulse, channel\[, name])                | Create a new pulse instruction.                                                                                                                                               |
  | [`append`](#qiskit.pulse.Play.append "qiskit.pulse.Play.append")(schedule\[, name])                            | Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted at the maximum time over all channels shared between `self` and `schedule`. |
  | [`assign_parameters`](#qiskit.pulse.Play.assign_parameters "qiskit.pulse.Play.assign_parameters")(value\_dict) | Modify and return self with parameters assigned according to the input.                                                                                                       |
  | [`ch_duration`](#qiskit.pulse.Play.ch_duration "qiskit.pulse.Play.ch_duration")(\*channels)                    | Return duration of the supplied channels in this Instruction.                                                                                                                 |
  | [`ch_start_time`](#qiskit.pulse.Play.ch_start_time "qiskit.pulse.Play.ch_start_time")(\*channels)              | Return minimum start time for supplied channels.                                                                                                                              |
  | [`ch_stop_time`](#qiskit.pulse.Play.ch_stop_time "qiskit.pulse.Play.ch_stop_time")(\*channels)                 | Return maximum start time for supplied channels.                                                                                                                              |
  | [`draw`](#qiskit.pulse.Play.draw "qiskit.pulse.Play.draw")(\[dt, style, filename, interp\_method, …])          | Plot the instruction.                                                                                                                                                         |
  | [`flatten`](#qiskit.pulse.Play.flatten "qiskit.pulse.Play.flatten")()                                          | Return itself as already single instruction.                                                                                                                                  |
  | [`insert`](#qiskit.pulse.Play.insert "qiskit.pulse.Play.insert")(start\_time, schedule\[, name])               | Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted within `self` at `start_time`.                                              |
  | [`is_parameterized`](#qiskit.pulse.Play.is_parameterized "qiskit.pulse.Play.is_parameterized")()               | Return True iff the instruction is parameterized.                                                                                                                             |
  | [`shift`](#qiskit.pulse.Play.shift "qiskit.pulse.Play.shift")(time\[, name])                                   | Return a new schedule shifted forward by time.                                                                                                                                |

  ## Attributes

  |                                                                                    |                                                                                                                                                    |
  | ---------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`channel`](#qiskit.pulse.Play.channel "qiskit.pulse.Play.channel")                | Return the [`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel") that this instruction is scheduled on. |
  | [`channels`](#qiskit.pulse.Play.channels "qiskit.pulse.Play.channels")             | Returns the channels that this schedule uses.                                                                                                      |
  | [`duration`](#qiskit.pulse.Play.duration "qiskit.pulse.Play.duration")             | Duration of this instruction.                                                                                                                      |
  | [`id`](#qiskit.pulse.Play.id "qiskit.pulse.Play.id")                               | Unique identifier for this instruction.                                                                                                            |
  | [`instructions`](#qiskit.pulse.Play.instructions "qiskit.pulse.Play.instructions") | Iterable for getting instructions from Schedule tree.                                                                                              |
  | [`name`](#qiskit.pulse.Play.name "qiskit.pulse.Play.name")                         | Name of this instruction.                                                                                                                          |
  | [`operands`](#qiskit.pulse.Play.operands "qiskit.pulse.Play.operands")             | Return instruction operands.                                                                                                                       |
  | [`parameters`](#qiskit.pulse.Play.parameters "qiskit.pulse.Play.parameters")       | Parameters which determine the instruction behavior.                                                                                               |
  | [`pulse`](#qiskit.pulse.Play.pulse "qiskit.pulse.Play.pulse")                      | A description of the samples that will be played.                                                                                                  |
  | [`start_time`](#qiskit.pulse.Play.start_time "qiskit.pulse.Play.start_time")       | Relative begin time of this instruction.                                                                                                           |
  | [`stop_time`](#qiskit.pulse.Play.stop_time "qiskit.pulse.Play.stop_time")          | Relative end time of this instruction.                                                                                                             |

  ### append

  <Function id="qiskit.pulse.Play.append" signature="append(schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted at the maximum time over all channels shared between `self` and `schedule`.

    **Parameters**

    *   **schedule** (*Union\['Schedule', 'Instruction']*) – Schedule or instruction to be appended
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Returns**

    A new schedule with `schedule` a this instruction at t=0.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>

  ### assign\_parameters

  <Function id="qiskit.pulse.Play.assign_parameters" signature="assign_parameters(value_dict)">
    Modify and return self with parameters assigned according to the input.

    **Parameters**

    **value\_dict** (`Dict`\[`ParameterExpression`, `Union`\[`ParameterExpression`, `float`, `int`]]) – A mapping from Parameters to either numeric values or another Parameter expression.

    **Return type**

    `Play`

    **Returns**

    Self with updated parameters.
  </Function>

  ### ch\_duration

  <Function id="qiskit.pulse.Play.ch_duration" signature="ch_duration(*channels)">
    Return duration of the supplied channels in this Instruction.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  ### ch\_start\_time

  <Function id="qiskit.pulse.Play.ch_start_time" signature="ch_start_time(*channels)">
    Return minimum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  ### ch\_stop\_time

  <Function id="qiskit.pulse.Play.ch_stop_time" signature="ch_stop_time(*channels)">
    Return maximum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  ### channel

  <Attribute id="qiskit.pulse.Play.channel">
    Return the [`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel") that this instruction is scheduled on.

    **Return type**

    [`PulseChannel`](qiskit.pulse.channels#qiskit.pulse.channels.PulseChannel "qiskit.pulse.channels.PulseChannel")
  </Attribute>

  ### channels

  <Attribute id="qiskit.pulse.Play.channels">
    Returns the channels that this schedule uses.

    **Return type**

    `Tuple`\[[`PulseChannel`](qiskit.pulse.channels#qiskit.pulse.channels.PulseChannel "qiskit.pulse.channels.PulseChannel")]
  </Attribute>

  ### draw

  <Function id="qiskit.pulse.Play.draw" signature="draw(dt=1, style=None, filename=None, interp_method=None, scale=1, plot_all=False, plot_range=None, interactive=False, table=True, label=False, framechange=True, channels=None)">
    Plot the instruction.

    **Parameters**

    *   **dt** (`float`) – Time interval of samples
    *   **style** (*Optional\[SchedStyle]*) – A style sheet to configure plot appearance
    *   **filename** (`Optional`\[`str`]) – Name required to save pulse image
    *   **interp\_method** (`Optional`\[`Callable`]) – A function for interpolation
    *   **scale** (`float`) – Relative visual scaling of waveform amplitudes
    *   **plot\_all** (`bool`) – Plot empty channels
    *   **plot\_range** (`Optional`\[`Tuple`\[`float`]]) – A tuple of time range to plot
    *   **interactive** (`bool`) – When set true show the circuit in a new window (this depends on the matplotlib backend being used supporting this)
    *   **table** (`bool`) – Draw event table for supported instructions
    *   **label** (`bool`) – Label individual instructions
    *   **framechange** (`bool`) – Add framechange indicators
    *   **channels** (`Optional`\[`List`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]]) – A list of channel names to plot

    **Returns**

    A matplotlib figure object of the pulse schedule

    **Return type**

    matplotlib.figure
  </Function>

  ### duration

  <Attribute id="qiskit.pulse.Play.duration">
    Duration of this instruction.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Attribute>

  ### flatten

  <Function id="qiskit.pulse.Play.flatten" signature="flatten()">
    Return itself as already single instruction.

    **Return type**

    `Instruction`
  </Function>

  ### id

  <Attribute id="qiskit.pulse.Play.id">
    Unique identifier for this instruction.

    **Return type**

    `int`
  </Attribute>

  ### insert

  <Function id="qiskit.pulse.Play.insert" signature="insert(start_time, schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted within `self` at `start_time`.

    **Parameters**

    *   **start\_time** (`int`) – Time to insert the schedule schedule
    *   **schedule** (*Union\['Schedule', 'Instruction']*) – Schedule or instruction to insert
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Returns**

    A new schedule with `schedule` inserted with this instruction at t=0.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>

  ### instructions

  <Attribute id="qiskit.pulse.Play.instructions">
    Iterable for getting instructions from Schedule tree.

    **Return type**

    `Tuple`\[`Tuple`\[`int`, `Instruction`]]
  </Attribute>

  ### is\_parameterized

  <Function id="qiskit.pulse.Play.is_parameterized" signature="is_parameterized()">
    Return True iff the instruction is parameterized.

    **Return type**

    `bool`
  </Function>

  ### name

  <Attribute id="qiskit.pulse.Play.name">
    Name of this instruction.

    **Return type**

    `str`
  </Attribute>

  ### operands

  <Attribute id="qiskit.pulse.Play.operands">
    Return instruction operands.

    **Return type**

    `Tuple`
  </Attribute>

  ### parameters

  <Attribute id="qiskit.pulse.Play.parameters">
    Parameters which determine the instruction behavior.

    **Return type**

    `Set`
  </Attribute>

  ### pulse

  <Attribute id="qiskit.pulse.Play.pulse">
    A description of the samples that will be played.

    **Return type**

    `Pulse`
  </Attribute>

  ### shift

  <Function id="qiskit.pulse.Play.shift" signature="shift(time, name=None)">
    Return a new schedule shifted forward by time.

    **Parameters**

    *   **time** (`int`) – Time to shift by
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Returns**

    The shifted schedule.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>

  ### start\_time

  <Attribute id="qiskit.pulse.Play.start_time">
    Relative begin time of this instruction.

    **Return type**

    `int`
  </Attribute>

  ### stop\_time

  <Attribute id="qiskit.pulse.Play.stop_time">
    Relative end time of this instruction.

    **Return type**

    `int`
  </Attribute>
</Class>

